Fixed a spacing

--- a/app/client/stylesheets/components/pu-block.sass
+++ b/app/client/stylesheets/components/pu-block.sass
@@ -166,7 +166,7 @@
     &-activity
         padding-top: 18px
         padding-bottom: 14px
-        margin-bottom: 10px
+        margin-bottom: 20px
 
         > .pu-avatar-stack
             position: absolute
